testsuite/positive/Issue-0637.n
class UtvpiTheory : System.Collections.Generic.List[UtvpiTheory.Var]
{
  class Inequality
  {
  }
  
  public class Var
  {
    public this()
    {
      def _ = System.Collections.Generic.List.[Inequality]();
    }
  }

  static Main() : void
  {
    def _ = Var();
  }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/
